# dpdk-hands-on

./: .gitignore  CLAUDE.md  CMakeLists.txt  DPDK-DTS-Practical-Guide.md  DPDK-DTS-Study-Guide.md  DPDK-Mbuf-Practical-Guide.md  DPDK-Ring-HTS-Guide.md  DPDK-Ring-Practical-Guide.md  DPDK-Ring-RTS-ZeroCopy-Pipeline-Guide.md  README.md  lesson10-ring-spsc-mpmc.md  lesson12-hts-ring.md  lesson13-mbuf-beginner.md  lesson14-1-acl-basics.md  lesson14-2-acl-practice.md  lesson14-acl.md  lesson3-capture-packet-improve.md  lesson4-parse-packet.md  lesson5-mempool.md  lesson6-flowmanager.md  lesson7-client_server_mp.md  lesson7-multiprocess.md  lesson7-simple_mp.md  lesson8-mp-ipc.md  lesson9-timer.md
.github/workflows/: deploy.yml
1-helloworld/: CMakeLists.txt  main.c
10-sp-sc-ring/: CMakeLists.txt  sp_sc_ring.c
11-mp-mc-ring/: CMakeLists.txt  mp_mc_ring.c
12-hts-ring/: CMakeLists.txt  README.md  hts_ring.c
13-mbuf_usage/: CMakeLists.txt  build_udp_packet.c  mbuf_basics.c  mbuf_data_demo.c  mbuf_hello.c
14-acl/: acl_demo.c
14-acl-basic/: CMakeLists.txt  acl_demo.c
15-acl-adv/: CMakeLists.txt  acl_demo.c
15-numa_demo/: CMakeLists.txt  README.md  numa_demo.c
16-time_cycles/: CMakeLists.txt  README.md  benchmark.c  time_demo.c
17-cmdline/: CMakeLists.txt  README.md  cmdline_basic.c  cmdline_console.c  cmdline_ring_mgr.c  cmdline_tokens.c
18-rss_multiqueue/: CMakeLists.txt  rss_multiqueue.c
19-rte_flow/: CMakeLists.txt  rte_flow_demo.c
2-hash_usage/: CMakeLists.txt  main.c
20-statistics/: CMakeLists.txt  stats_monitor.c
21-ip_fragmentation/: CMakeLists.txt  ip_frag_demo.c
22-pcap_capture/: CMakeLists.txt  README.md  pcap_capture.c
23-lpm_routing/: CMakeLists.txt  README.md  lpm_demo.c
24-graph-basic/: CMakeLists.txt  README.md  graph_demo.c
25-eventdev-basic/: CMakeLists.txt  README.md  eventdev_demo.c
3-capture_packet/: CMakeLists.txt  capture_packet  main.c  simple_tsc_test
4-parse_packet/: CMakeLists.txt  main.c
5-mempool_usage/: CMakeLists.txt  main.c
6-flow_manager/: CMakeLists.txt  flow_table.c  flow_table.h  main.c
7-multiprocess/: CMakeLists.txt  README.md  setup.sh
7-multiprocess/basic/: common.h  primary.c  secondary.c
7-multiprocess/client_server/: client.c  common.h  server.c
7-multiprocess/ring_comm/: common.h  receiver.c  sender.c
8-multiprocess-communicate/: CMakeLists.txt  client.c  common.h  mp_client  mp_server  server.c
9-timer/: CMakeLists.txt  main.c  periodic_timer.c  single_timer.c
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/lessons/: acl-workflow-enhanced.md  lesson-time-cycles-benchmark.md  lesson1-helloworld.md  lesson10-ring-spsc-mpmc.md  lesson14-1-acl-basics.md  lesson14-2-acl-practice.md  lesson14-3-acl-advanced.md  lesson15-basic-numa.md  lesson18-rss-multiqueue.md  lesson19-rte-flow.md  lesson2-hash.md  lesson21-ip-fragmentation.md  lesson22-pcap-capture.md  lesson23-lpm-routing.md  lesson24-graph-framework.md  lesson25-eventdev-framework.md  lesson3-capture-packet.md  lesson4-parse-packet.md  lesson7-client_server_mp.md  lesson8-mp-ipc.md  lesson9-timer.md
